k8s/client-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      component: web
  template:
    metadata:
      label: 
        component: web
    spec:
      containers:
        - name: client
          image: koraxtu/multi-client
          ports:
            - containerPort: 3000
          resources:
            limits:
              cpu: "500m" # 500 milliCPU (0.5 CPU cores)
              memory: "512Mi" # 512 Megabytes
            requests:
              cpu: "200m" # 200 milliCPU (0.2 CPU cores)
              memory: "256Mi" # 256 Megabytes
