k8s/postgres-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: postgres
  template:
    metadata:
      labels:
        component: postgres
    spec:
      volumes:
        - name: postgres-storage
          persistentVolumeClaim:
            claimName: database-persistent-volume-claim
      containers:
        - name: postgres
          image: postgres
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: postgres-storage
              mountPath: /var/lib/postgresql/data
              subPath: postgres
          resources:
            limits:
              cpu: "500m" # 500 milliCPU (0.5 CPU cores)
              memory: "512Mi" # 512 Megabytes
            requests:
              cpu: "200m" # 200 milliCPU (0.2 CPU cores)
              memory: "256Mi" # 256 Megabytes" # 256 Megabytes" # 256 Megabytes" # 256 Megabytes # 256 Megabytes
