k8s/redis-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: redis
  template:
    metadata:
      labels:
        component: redis
    spec:
      containers:
        - name: redis
          image: redis
          ports:
            - containerPort: 6379
          resources:
            limits:
              cpu: "500m" # 500 milliCPU (0.5 CPU cores)
              memory: "512Mi" # 512 Megabytes
            requests:
              cpu: "200m" # 200 milliCPU (0.2 CPU cores)
              memory: "256Mi" # 256 Megabytes
