k8s/server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      component: server
  template:
    metadata:
      labels:
        component: server
    spec:
      containers:
        - name: server
          image: koraxtu/multi-server
          ports:
            - containerPort: 5000
          resources:
            limits:
              cpu: "500m" # 500 milliCPU (0.5 CPU cores)
              memory: "512Mi" # 512 Megabytes
            requests:
              cpu: "200m" # 200 milliCPU (0.2 CPU cores)
              memory: "256Mi" # 256 Megabytes
