k8s/worker-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: worker-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: worker
  template:
    metadata:
      labels:
        component: worker
    spec:
      containers:
        - name: worker
          image: koraxtu/multi-worker
          resources:
            limits:
              cpu: "500m" # 500 milliCPU (0.5 CPU cores)
              memory: "512Mi" # 512 Megabytes
            requests:
              cpu: "200m" # 200 milliCPU (0.2 CPU cores)
              memory: "256Mi" # 256 Megabytes
